// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should add a new todo 1`] = `
<TodoList>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    />
  </div>
</TodoList>
`;

exports[`should add a new todo 2`] = `
<TodoList>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    />
  </div>
</TodoList>
`;

exports[`should display todos passed to it 1`] = `
<TodoList
  todos={
    Array [
      Object {
        "title": "zagzag",
      },
    ]
  }
>
  <div>
    <input
      className="new-todo-input"
      onKeyDown={[Function]}
      type="text"
    />
    <ul
      className="todos"
    >
      <li
        key="0"
      >
        zagzag
      </li>
    </ul>
  </div>
</TodoList>
`;

exports[`should render todo list 1`] = `
<div>
  <input
    className="new-todo-input"
    onKeyDown={[Function]}
    type="text"
  />
  <ul
    className="todos"
  />
</div>
`;
